# uavs

./: .gitignore  README.md  cam_calibration.launch  cam_calibration_example.launch  cam_calibration_svo.launch  cam_test.launch  cam_ueye_calibration_svo.launch  clean.sh  eclipse_project_environment.txt  fusion_example.launch  fusion_test.launch  lsd_test.launch  mavlink_test.launch  setpoint.launch  slam_test.launch  svo_test.launch  svo_ueye_test.launch  ueye_test.launch
.catkin_tools/default/: build.yaml
src/Ellipse/: CMakeLists.txt  package.xml
src/Ellipse/src/: Ellipse_node.cpp  ellipseMinimal.cpp
src/Ellipse/src/cpp/: sbgECom.h  sbgEComIds.h  sbgEComLib.h
src/Ellipse/src/cpp/binaryLogs/: binaryLogDebug.cpp  binaryLogDebug.h  binaryLogEkf.cpp  binaryLogEkf.h  binaryLogEvent.cpp  binaryLogImu.cpp  binaryLogMag.cpp  binaryLogMag.h  binaryLogShipMotion.cpp  binaryLogStatus.h
src/Ellipse/src/cpp/commands/: commandsCommon.cpp  commandsInfo.cpp  commandsInterface.h  commandsMag.cpp  commandsMag.h  commandsOdo.h  commandsOutput.h  commandsSettings.cpp
src/Ellipse/src/cpp/interfaces/: interfaceUdp.cpp  interfaceUdp.h
src/Ellipse/src/cpp/misc/: sbgCrc.h
src/Ellipse/src/cpp/protocol/: protocol.h
src/director/: CMakeLists.txt  package.xml
src/director/launch/: test.launch
src/director/msg/: ExitNode.msg
src/director/scripts/: ccwindow_director_node.py  cwindow_director_node.py  landing2_director_node.py  landing_director_node.py  payload2_director_node.py  payload_director_node.py  pole_director_node.py  require_information.py  screen_director_node.py  test.py
src/director/srv/: NextNode.srv  PreNode.srv
src/ellipse/: CMakeLists.txt  compile_ellipse.sh  package.xml
src/ellipse/script/: imu.py
src/ellipse/src/: ellipse_node.c
src/ellipse/src/Examples/ellipseMinimal/: CMakeLists.txt  ellipseMinimal
src/ellipse/src/Examples/ellipseMinimal/projects/unix/: build.sh
src/ellipse/src/Examples/ellipseMinimal/projects/visual/: ellipseMinimal.sln  ellipseMinimal.vcxproj
src/ellipse/src/Examples/ellipseMinimal/src/: ellipseMinimal.c
src/ellipse/src/cpp/: SbgECanId.h
src/ellipse/src/cpp/binaryLogs/: binaryLogEvent.h  binaryLogImu.h  binaryLogPressure.h  binaryLogUsbl.c  binaryLogUsbl.h  binaryLogUtc.h  binaryLogs.cpp
src/ellipse/src/cpp/commands/: commands.c  commandsCommon.h  commandsEvent.h  commandsInterface.cpp  commandsOdo.c  commandsOutput.cpp  commandsSensor.h
src/ellipse/src/cpp/interfaces/: interface.h  interfaceSerial.h  interfaceSerialUnix.cpp  interfaceSerialWin.c
src/ellipse/src/cpp/misc/: sbgCrc.c  sbgStreamBuffer.h  sbgSwap.h
src/ellipse/src/cpp/protocol/: protocol.c
src/ellipse/src/cpp/time/: sbgTime.h
src/ellipse/src/projects/visual/: sbgECom.vcxproj.filters
src/ellipse/src/sbgECom/: sbgECom.lib  sbgEComd.lib
src/ellipse/src/sbgECom/src/: sbgECom.c  sbgEComVersion.h
src/ethzasl_msf/msf_updates/: px4_svo_sensor_fix.yaml
src/ethzasl_msf/msf_updates/launch/: viconpos_sensor.launch
src/imuSbg/: CMakeLists.txt  package.xml
src/imuSbg/launch/: imuSbg_node.launch
src/imuSbg/src/: ellipseMinimal.cpp  sbgCommon.h
src/imuSbg/src/binaryLogs/: binaryLogGps.c  binaryLogGps.h  binaryLogOdometer.c  binaryLogShipMotion.h
src/imuSbg/src/commands/: commands.h  commandsAdvanced.c  commandsEvent.c  commandsSettings.h
src/imuSbg/src/interfaces/: interfaceFile.h  interfaceSerialUnix.c
src/imuSbg/src/misc/: sbgSplitBuffer.c  sbgSplitBuffer.h  sbgStreamBuffer.h  transfer.c
src/lsd_slam/: .gitignore
src/lsd_slam/launch/: example.launch  example_eclipse.launch  lsd_group.py
src/lsd_slam/lsd_slam_core/: CMakeLists.txt
src/mavros/mavros/src/plugins/: imu_pub.cpp
src/rpg_svo/svo/: CMakeLists.txt
src/rpg_svo/svo_ros/: CMakeLists.txt  rviz_config.rviz
src/rpg_svo/svo_ros/launch/: example.launch  test_rig3.launch
src/rpg_svo/svo_ros/param/: camera_pinhole.yaml  eye_projection_matrix  vo_px4.yaml
src/rpg_svo/svo_ros/src/: svo_msf_link_node.cpp
src/rpg_vikit/vikit_common/: CMakeLists.txt
src/usb_cam/nodes/: usb_cam_node.cpp
src/viconXbee/: CMakeLists.txt  package.xml
src/viconXbee/launch/: viconXbee.launch
src/viconXbee/msg/: viconPoseMsg.msg
src/viconXbee/src/: viconXbee.cpp
src/vision/camera/: CMakeLists.txt  package.xml
src/vision/camera/launch/: display.launch  save_image.launch
src/vision/camera/rviz/: cameras.rviz
src/vision/camera/src/: display.cpp  images.cpp  recorder_node.cpp  video.cpp  video1.cpp
src/vision/detecter/: CMakeLists.txt  package.xml
src/vision/detecter/launch/: circle_detecter.launch  circle_detecter_simulation.launch  rectangle_detecter.launch
src/vision/detecter/msg/: CircleTarget.msg  RectangleTarget.msg
src/vision/detecter/rviz/: circle.rviz  detecter.rviz  rectangle.rviz
src/vision/detecter/src/: circle_node.cpp  rectangle_node.cpp
src/vision/detecter/src/circle/: Ellipse.cpp  Ellipse.h  EllipseDetectorLX.cpp  (+3 more)
src/vision/tracker/: CMakeLists.txt  package.xml
src/vision/tracker/msg/: targets.msg
src/vision/tracker/src/: tracker_node.cpp
src/visualuwb/: CMakeLists.txt  package.xml
src/visualuwb/eclipse_project/.metadata/: version.ini
src/visualuwb/eclipse_project/visualuwb/: .pydevproject
src/visualuwb/launch/: multiquadcopters.launch  record_data.launch  record_play_simulation.launch  record_simulation.launch  rendevous_average.launch  rendevous_average_more.launch  simulation.launch  visual_uwb.launch  xbox_controller.launch
src/visualuwb/msg/: uwb.msg
src/visualuwb/rviz/: multiquadcopter.rviz
src/visualuwb/script/: Formation.py  HuntController.py  HuntPlot.py  VU_filter.py  example_ls.py  frame.py  frame_listener.py  ground.txt  ground_truth.txt  hunt_srv_node.py  optimal_para.py  rendezvous_controller.py  roslib.py  sslib.py  tem.py  test.py  visualuwb.py  visualuwbfilter.py
src/visualuwb/src/: README.md  complie  global.h  rcm.cpp  rcm.h  rcmIf.cpp  rcmIf.h  rendezvous.cpp  rendezvous.h  rendezvous_node.cpp  ssuwb.cpp  ssuwb.h  uwb_node.cpp
src/visualuwb/srv/: Rendezvous.srv
src/visualuwb/visualuwb/script/: frame.py  visualuwb.py
(+96 files in other folders)
